--- a/MSP430F169_RTOS/.settings/org.eclipse.core.resources.prefs
+++ b/MSP430F169_RTOS/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/APP_Source/subdir_rules.mk=UTF-8
+encoding//Debug/APP_Source/subdir_vars.mk=UTF-8
 encoding//Debug/Driver_Source/subdir_rules.mk=UTF-8
 encoding//Debug/Driver_Source/subdir_vars.mk=UTF-8
 encoding//Debug/OS_Source/subdir_rules.mk=UTF-8
