--- a/MSP430F169_GPIO/.project
+++ b/MSP430F169_GPIO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GPIO</name>
+	<name>MSP430F169_GPIO</name>
 	<comment></comment>
 	<projects>
 	</projects>
