--- a/MSP430F169_HelloWorld/.project
+++ b/MSP430F169_HelloWorld/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HelloWorld</name>
+	<name>MSP430F169_HelloWorld</name>
 	<comment></comment>
 	<projects>
 	</projects>
